--- a/package.json
+++ b/package.json
@@ -18,5 +18,8 @@
     "jest": "^27.5.1",
     "ts-jest": "^27.1.4",
     "typescript": "^4.6.3"
+  },
+  "dependencies": {
+    "@web3pack/base-x": "^1.0.1"
   }
 }
