--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "typescript": "^4.6.3"
   },
   "dependencies": {
-    "@web3pack/base-x": "^1.0.1"
+    "@web3pack/base-x": "^1.0.1",
+    "hash.js": "^1.1.7"
   }
 }
